jcsoriano-09042017 Cambio por error en commit

--- a/SistemaServicioSocial/SistemaServicioSocial-war/nbproject/project.properties
+++ b/SistemaServicioSocial/SistemaServicioSocial-war/nbproject/project.properties
@@ -47,8 +47,8 @@ j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
     ${file.reference.BootsFaces-OSP-1.0.2-dist.jar}:\
-    ${reference.SistemaServicioSocial.dist}:\
     ${libs.primefaces.classpath}:\
+    ${reference.SistemaServicioSocial-ejb.dist}:\
     ${file.reference.highfaces-1.1.jar}:\
     ${file.reference.org.json.jar}
 # Space-separated list of extra javac options
@@ -57,8 +57,8 @@ javac.debug=true
 javac.deprecation=false
 javac.processorpath=\
     ${javac.classpath}
-javac.source=1.8
-javac.target=1.8
+javac.source=1.7
+javac.target=1.7
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -79,8 +79,8 @@ javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
-project.SistemaServicioSocial=../SistemaServicioSocial
-reference.SistemaServicioSocial.dist=${project.SistemaServicioSocial}/dist/SistemaServicioSocial.jar
+project.SistemaServicioSocial-ejb=../SistemaServicioSocial-ejb
+reference.SistemaServicioSocial-ejb.dist=${project.SistemaServicioSocial-ejb}/dist/SistemaServicioSocial-ejb.jar
 resource.dir=setup
 run.test.classpath=\
     ${javac.test.classpath}:\
