--- a/SistemaServicioSocial/nbproject/project.properties
+++ b/SistemaServicioSocial/nbproject/project.properties
@@ -23,7 +23,7 @@ j2ee.server.type=gfv3ee6
 jar.compress=false
 jar.content.additional=\
     ${reference.SistemaServicioSocial-war.dist-ear}:\
-    ${reference.SistemaServicioSocial.dist-ear}
+    ${reference.SistemaServicioSocial-ejb.dist}
 jar.name=SistemaServicioSocial.ear
 javac.debug=true
 javac.deprecation=false
@@ -32,10 +32,10 @@ javac.target=1.8
 meta.inf=src/conf
 no.dependencies=false
 platform.active=default_platform
-project.SistemaServicioSocial=SistemaServicioSocial
+project.SistemaServicioSocial-ejb=SistemaServicioSocial-ejb
 project.SistemaServicioSocial-war=SistemaServicioSocial-war
+reference.SistemaServicioSocial-ejb.dist=${project.SistemaServicioSocial-ejb}/dist/SistemaServicioSocial-ejb.jar
 reference.SistemaServicioSocial-war.dist-ear=${project.SistemaServicioSocial-war}/dist/SistemaServicioSocial-war.war
-reference.SistemaServicioSocial.dist-ear=${project.SistemaServicioSocial}/dist/SistemaServicioSocial.jar
 resource.dir=setup
 run.classpath=
 source.root=.
