jcsoriano-2306017 Creacion de tablas usadas en sistema servicio social Se crean nuevas ventanas de proyectos registro y mejoras en visualizacion

--- a/SistemaServicioSocial/SistemaServicioSocial-ejb/nbproject/project.properties
+++ b/SistemaServicioSocial/SistemaServicioSocial-ejb/nbproject/project.properties
@@ -36,8 +36,7 @@ j2ee.server.type=gfv3ee6
 jar.compress=false
 jar.name=SistemaServicioSocial-ejb.jar
 jars.in.ejbjar=false
-javac.classpath=\
-    ${libs.EclipseLinkJPA.classpath}
+javac.classpath=
 javac.debug=true
 javac.deprecation=false
 javac.processorpath=\
