--- a/SistemaServicioSocial/nbproject/project.properties
+++ b/SistemaServicioSocial/nbproject/project.properties
@@ -22,8 +22,8 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
 jar.content.additional=\
-    ${reference.SistemaServicioSocial-war.dist-ear}:\
-    ${reference.SistemaServicioSocial-ejb.dist}
+    ${reference.SistemaServicioSocial-ejb.dist}:\
+    ${reference.SistemaServicioSocial-war.dist-ear}
 jar.name=SistemaServicioSocial.ear
 javac.debug=true
 javac.deprecation=false
