--- a/SistemaServicioSocial/SistemaServicioSocial-war/web/WEB-INF/web.xml
+++ b/SistemaServicioSocial/SistemaServicioSocial-war/web/WEB-INF/web.xml
@@ -6,7 +6,11 @@
     </context-param>	
     <context-param>
         <param-name>primefaces.THEME</param-name>
-        <param-value>home</param-value>
+        <param-value>black-tie</param-value>
+    </context-param>
+    <context-param>
+        <param-name>primefaces.FONT_AWESOME</param-name>
+        <param-value>true</param-value>
     </context-param>
     <servlet>
         <servlet-name>Faces Servlet</servlet-name>
@@ -15,7 +19,7 @@
     </servlet>
     <servlet-mapping>
         <servlet-name>Faces Servlet</servlet-name>
-        <url-pattern>/faces/*</url-pattern>
+        <url-pattern>/info/*</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
@@ -23,6 +27,6 @@
         </session-timeout>
     </session-config>
     <welcome-file-list>
-        <welcome-file>faces/login.xhtml</welcome-file>
+        <welcome-file>info/login.xhtml</welcome-file>
     </welcome-file-list>
 </web-app>
